force-app/main/default/objects/Account/fields/Dormant__c.field-meta.xml
<CustomField>
    <fullName>Dormant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dormant</label>
    <type>Checkbox</type>
</CustomField>