force-app/main/default/objects/Account/fields/Dormant_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Dormant_Reasoning__c</fullName>
    <label>Dormant Reasoning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>