force-app/main/default/objects/Account/fields/Is_Converted_From_Lead_Conversion_Page__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_From_Lead_Conversion_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created From Lead Conversion Page</label>
    <type>Checkbox</type>
</CustomField>