force-app/main/default/objects/Account/fields/Is_Similar_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Similar_to_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Similar to Lead</label>
    <type>Checkbox</type>
</CustomField>