force-app/main/default/objects/Account/fields/Operations_Executive__c.field-meta.xml
<CustomField>
    <fullName>Operations_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Executive</label>
    <referenceTo>Operations_Executive__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>