force-app/main/default/objects/Account/recordTypes/Shipper.recordType-meta.xml
<RecordType>
    <fullName>Shipper</fullName>
    <active>true</active>
    <label>Shipper</label>
</RecordType>