force-app/main/default/objects/Account/validationRules/Dormant_Reasoning.validationRule-meta.xml
<ValidationRule>
    <fullName>Dormant_Reasoning</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Dormant__c= TRUE,ISBLANK( Dormant_Reasoning__c ))</errorConditionFormula>
    <errorDisplayField>Dormant_Reasoning__c</errorDisplayField>
    <errorMessage>Please provide dormant Reasoning</errorMessage>
</ValidationRule>